apps/stalwart/ingress-mail-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: stalwart-smtp
  namespace: apps
spec:
  entryPoints:
    - smtp
    - smtp-fp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: stalwart
          port: 25
          proxyProtocol:
            version: 2
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: stalwart-smtps
  namespace: apps
spec:
  entryPoints:
    - smtps
  routes:
    - match: HostSNI(`*`)
      services:
        - name: stalwart
          port: 465
          proxyProtocol:
            version: 2
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: stalwart-submission
  namespace: apps
spec:
  entryPoints:
    - submission
    - submission-fp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: stalwart
          port: 587
          proxyProtocol:
            version: 2
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: stalwart-imaps
  namespace: apps
spec:
  entryPoints:
    - imaps
  routes:
    - match: HostSNI(`*`)
      services:
        - name: stalwart
          port: 993
          proxyProtocol:
            version: 2
